Added teh schedule page.

--- a/ng-examples/src/app/app.component.html
+++ b/ng-examples/src/app/app.component.html
@@ -1,5 +1,6 @@
 <nav>
-  <a routerLink="/" routerLinkActive="active">Home</a>
+  <a routerLink="/" routerLinkActive="active">Home</a> &nbsp;
+  <a routerLink="/schedule" routerLinkActive="active">Schedule</a>
 </nav>
 <br>
 <router-outlet></router-outlet>
